# PureSheShe

./: README.md  deldel_build_backend.py  file1.py  from_df_to_sel_time.csv  pyproject.toml  requirements-dev.txt  requirements.txt  tests_results_comparison.csv
docs/: COLAB.md  EXPERIMENT_PROTOCOL.md  experiments_log.csv  find_low_dim_spaces_review.md  high_dim_metrics_analysis.md
experiments_outputs/: README_aggressive_find_low_dim_sweep.md  README_find_comb_vs_low_dim.md  README_stage_infer_ab.md  adaptive_sampling_representativeness.csv  aggressive_find_low_dim_sweep.csv  core_bundle_preset_matrix.csv  core_bundle_sampling_timings.csv  corner_compass_best_by_class.csv  corner_compass_by_region.csv  corner_compass_stage_timings.csv  corner_compass_summary.json  cv_split_timing.csv  deldel_test_results.csv  family_clustering_experiments.md  family_clustering_results.csv  family_clustering_results_summary.csv  find_comb_vs_low_dim_competition.csv  find_low_dim_spaces_ab_test_results.csv  finder_runs_params.csv  frontier_planes_explorer_comparison.csv  frontier_planes_explorer_comparison.py  high_dim_metrics_by_region.csv  high_dim_metrics_summary.csv  infer_stage_ab_results.csv  infer_stage_ab_timings.csv  mid_preset_options.csv  multiclass_explorer_regression.csv  run_aggressive_low_dim_hparam_search.py  run_comb_vs_low_dim_competition.py  run_corner_min_prediction_experiment.py  run_family_clustering_comparison.py  run_find_low_dim_param_sweep.py  run_find_low_dim_spaces_ab_test.py  run_from_df_to_sel_timing.py  run_high_dim_metrics_sweep.py  run_infer_stage_ab_test.py  run_scores_dedup_ab_test.py  scores_dedup_ab_consistency.csv  scores_dedup_ab_timing.csv
experiments_outputs/ab_test_reports/: baseline_top2.txt  deterministic_top2.txt  find_comb_dim_spaces_top3.txt  find_low_dim_spaces_top3.txt  precision_boost_top2.txt  support_first_top2.txt
src/deldel/: engine.py  (+15 more)
subspaces/: README_Methods.md  __init__.py
tests/: conftest.py  test_core_method_bundle.py  test_cv_split_timing.py  test_deldel.py  test_globalmaj.py  test_infer_stage_ab.py  test_subspace_change_detector.py  test_utils_equivalence.py
(+40 files in other folders)
