[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deldel"
version = "0.1.0"
description = "Tools for analyzing decision boundaries of classifiers"
readme = "README.md"
authors = [{name = "DelDel Team"}]
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "plotly>=5.14",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
packages = [
    "deldel",
    "subspaces",
    "subspaces.experiments",
]

[tool.setuptools.package-dir]
deldel = "src/deldel"
subspaces = "subspaces"
"subspaces.experiments" = "subspaces/experiments"

[project.urls]
Homepage = "https://example.com/deldel"
